k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-worker
spec:
  replicas: 1
  selector:
    matchLabels: { app: default-worker }
  template:
    metadata:
      labels: { app: default-worker }
    spec:
      containers:
      - name: default-worker
        image: default-worker:latest
        imagePullPolicy: Never
