k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-web
spec:
  replicas: 1
  selector:
    matchLabels: { app: default-web }
  template:
    metadata:
      labels: { app: default-web }
    spec:
      containers:
      - name: web
        image: default-web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: default-web
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: default-web
