k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: default.shiz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: default-web
            port: { number: 8000 }
